--- a/packages/it/dieta_it.yaml
+++ b/packages/it/dieta_it.yaml
@@ -290,11 +290,11 @@ automation:
       - platform: event
         event_type: telegram_command
         event_data:
-          command: /dieta
+          command: /diet
       - platform: event
         event_type: telegram_command
         event_data:
-          command: /diet
+          command: /diet_today
 
     condition:
       - condition: or
